WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287272
`FullscreenManager::updatePageFullscreenStatusIfTopDocument()` should not track `m_fullscreenElement`
https://bugs.webkit.org/show_bug.cgi?id=287272
Summary
`FullscreenManager::updatePageFullscreenStatusIfTopDocument()` should not tra...
Tim Nguyen (:ntim)
Reported
2025-02-07 11:31:47 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-07 11:38:56 PST
<
rdar://problem/144400394
>
Tim Nguyen (:ntim)
Comment 2
2025-02-07 11:43:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40232
EWS
Comment 3
2025-02-07 15:36:13 PST
Committed
290048@main
(09af7b0c35cd): <
https://commits.webkit.org/290048@main
> Reviewed commits have been landed. Closing PR #40232 and removing active labels.
EWS
Comment 4
2025-02-10 11:31:19 PST
Committed
289651.75@safari-7621-branch
(3ef76b86735d): <
https://commits.webkit.org/289651.75@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2549 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug