`FullscreenManager::updatePageFullscreenStatusIfTopDocument()` should not track `m_fullscreenElement` https://bugs.webkit.org/show_bug.cgi?id=287272 rdar://144400394

Reviewed by Alex Christensen.

m_fullscreenElement inaccurately represents the fullscreen element in the case where the fullscreen element is implicitly fullscreened
by the children. 288737@main changed the behavior in that specific case.

Track fullscreenElement() instead, which is linked to the top layer and the fullscreen flag.

* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::exitFullscreen):
(WebCore::FullscreenManager::finishExitFullscreen):
(WebCore::FullscreenManager::willEnterFullscreen):
(WebCore::FullscreenManager::didExitFullscreen):
(WebCore::FullscreenManager::updatePageFullscreenStatusIfTopDocument):
(WebCore::FullscreenManager::clear):

Canonical link: https://commits.webkit.org/290048@main